[gd_scene load_steps=19 format=2]

[ext_resource path="res://Enemies/Bat.png" type="Texture" id=1]
[ext_resource path="res://Shadows/SmallShadow.png" type="Texture" id=2]
[ext_resource path="res://HurtBox.tscn" type="PackedScene" id=3]
[ext_resource path="res://Enemies/Bat.gd" type="Script" id=4]
[ext_resource path="res://Enemies/BatStats.tscn" type="PackedScene" id=5]
[ext_resource path="res://Enemies/PlayerDetectionZone.tscn" type="PackedScene" id=6]
[ext_resource path="res://HitBox.tscn" type="PackedScene" id=7]
[ext_resource path="res://Enemies/WanderCtrl.tscn" type="PackedScene" id=8]

[sub_resource type="AtlasTexture" id=1]
atlas = ExtResource( 1 )
region = Rect2( 0, 0, 16, 24 )

[sub_resource type="AtlasTexture" id=2]
atlas = ExtResource( 1 )
region = Rect2( 16, 0, 16, 24 )

[sub_resource type="AtlasTexture" id=3]
atlas = ExtResource( 1 )
region = Rect2( 32, 0, 16, 24 )

[sub_resource type="AtlasTexture" id=4]
atlas = ExtResource( 1 )
region = Rect2( 48, 0, 16, 24 )

[sub_resource type="AtlasTexture" id=5]
atlas = ExtResource( 1 )
region = Rect2( 64, 0, 16, 24 )

[sub_resource type="SpriteFrames" id=6]
animations = [ {
"frames": [ SubResource( 1 ), SubResource( 2 ), SubResource( 3 ), SubResource( 4 ), SubResource( 5 ) ],
"loop": true,
"name": "BatAnimationFly",
"speed": 10.0
} ]

[sub_resource type="CircleShape2D" id=7]
radius = 5.45571

[sub_resource type="CircleShape2D" id=8]
radius = 56.0

[sub_resource type="CircleShape2D" id=9]
radius = 4.92184

[sub_resource type="CapsuleShape2D" id=10]
radius = 7.64605
height = 3.81752

[node name="Bat" type="KinematicBody2D"]
collision_layer = 80
collision_mask = 17
script = ExtResource( 4 )
MAX_SPEED = 50

[node name="Stats" parent="." instance=ExtResource( 5 )]
max_health = 3

[node name="AnimatedSprite" type="AnimatedSprite" parent="."]
frames = SubResource( 6 )
animation = "BatAnimationFly"
frame = 1
playing = true
offset = Vector2( 0, -12 )

[node name="SmallShadow" type="Sprite" parent="."]
texture = ExtResource( 2 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource( 7 )

[node name="PlayerDetectionZone" parent="." instance=ExtResource( 6 )]

[node name="CollisionShape2D" parent="PlayerDetectionZone" index="0"]
position = Vector2( 0, -16 )
shape = SubResource( 8 )

[node name="HitBox" parent="." instance=ExtResource( 7 )]
collision_mask = 4

[node name="CollisionShape2D" parent="HitBox" index="0"]
position = Vector2( -0.101818, -12.2433 )
shape = SubResource( 9 )

[node name="HurtBox" parent="." groups=[
"bats",
] instance=ExtResource( 3 )]
collision_layer = 8
hit_effect_offset = Vector2( 0, 8 )

[node name="CollisionShape2D2" type="CollisionShape2D" parent="HurtBox"]
position = Vector2( 0, -14.8379 )
shape = SubResource( 10 )

[node name="WanderCtrl" parent="." instance=ExtResource( 8 )]

[connection signal="area_entered" from="HurtBox" to="." method="_on_HurtBox_area_entered"]

[editable path="PlayerDetectionZone"]
[editable path="HitBox"]
